# Lab5TPNo-money

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  bin.rar  makefile  ЛабРабота5-ТП-2019-2020.docx  Лиховец_Лаба_5.docx  Отчет.docx
BackEndLogic/: CMakeLists.txt
DataBase/: AirCab.db  AirCab.db-journal  DumpedDB.sql
Diagrams/: UML.mdj
Diagrams/Lab5/: project.conf
Diagrams/Lab5/.runtime/: .save  projectInfo.html
Diagrams/Lab5/.runtime/fragments/Lab5/.index/: index.dbf.0  index.dbr.0  index.idf.0  index.idr.0
Diagrams/Lab5/data/fragments/Lab5/model/Infrastructure.DiagramSet/: 7ad1b595-c61e-486b-a098-879cd155d8c5.exml
ForVanuaDebug/Students/: Students.sln
ForVanuaDebug/Students/Students/: MyStudents.db  Students.vcxproj  Students.vcxproj.filters  main.c  request.c  request.h
ReadyToPlay/DataBase/: AirCab.db
doc/: ЛабРабота5-ТП-2019-2020.docx
enc_temp_folder/c7a22b3e441e37fe7eeb81de1e16391/: UIController.c
include/: Authorization.h  BDfunctions.h  Command.h  Formula.h  Function.h  Registration.h  SessionController.h  UIController.h  User.h  functions.h  request.h
lib/sqlite3/: CMakeLists.txt
src/: CMakeLists.txt
src/BackEndLogic/: BDfunctions.c  Formula.c  functions.c  main.c  request.c
src/FrontLogic/: Authorization.c  CMakeLists.txt  Registration.c  SessionController.c  UIController.c  mainFront.c
tst/: AllHelicopter.cpp  AngelinaTest.cpp  Formula-test.cpp  Formula.cpp  GetFlightTest.cpp  HelicopterFlyTest.cpp  ShowAllCommanders.cpp  ShowAllCrewTest.cpp  ShowAllFlights.cpp  TestsForSQLite.cpp
(+17 files in other folders)
